--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-android-extensions'
+//    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+//    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -14,7 +15,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-        viewBinding.enabled true
+//        viewBinding.enabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,13 +40,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'org.chromium.net:cronet-embedded:76.3809.111'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'org.chromium.net:cronet-embedded:102.5005.125'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    kapt  "android.arch.persistence.room:compiler:1.1.1"
     testImplementation 'junit:junit:4.13.2'
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -70,14 +71,14 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
 //    coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
 //    room
     def room_version = "2.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.room:room-ktx:2.4.2"
@@ -104,5 +105,9 @@ dependencies {
 
     // dagger
     implementation 'com.google.dagger:dagger:2.42'
-    kapt 'com.google.dagger:dagger-compiler:2.42'
+    annotationProcessor  'com.google.dagger:dagger-compiler:2.42'
+
+    // hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    annotationProcessor  "com.google.dagger:hilt-compiler:2.38.1"
 }
