--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-//    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
-//    id 'dagger.hilt.android.plugin'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -15,7 +14,6 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-//        viewBinding.enabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -48,8 +46,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt  "android.arch.persistence.room:compiler:1.1.1"
     testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // jackson
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.12.1'
@@ -83,7 +79,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.room:room-ktx:2.4.2"
 
-//    navagition
+//    navigation
     def nav_version = "2.5.0"
 
     // Java language implementation
@@ -103,11 +99,14 @@ dependencies {
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
-    // dagger
-    implementation 'com.google.dagger:dagger:2.42'
-    annotationProcessor  'com.google.dagger:dagger-compiler:2.42'
+//    // dagger
+//    implementation 'com.google.dagger:dagger:2.42'
+//    kapt  'com.google.dagger:dagger-compiler:2.42'
 
     // hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    annotationProcessor  "com.google.dagger:hilt-compiler:2.38.1"
+    implementation "com.google.dagger:hilt-android:2.43"
+    kapt  "com.google.dagger:hilt-compiler:2.43"
+}
+kapt {
+    correctErrorTypes = true
 }
