--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,7 @@ dependencies {
     // hilt
     implementation "com.google.dagger:hilt-android:2.43"
     kapt  "com.google.dagger:hilt-compiler:2.43"
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
 
 //    compose
  //    Integration with activities
